<resources>
    <string name="app_name">Ma Bibliothèque</string>
    <string name="logout">Logout</string>
    <string name="home">Accueil</string>
    <string name="ok">OK</string>

    <!-- WARNING CHANGE YESTERDAY STRING IN CONSTANTS CLASS FUNCTION OF LANGUAGES -->

    <!-- AddBookFragment -->
    <string name="add_book">Ajouter un livre</string>
    <string name="book_front_cover">book\'s front cover image</string>
    <string name="search_book">Rechercher un livre…</string>

    <!-- Camera Preview -->
    <string name="permission_camera_rationale">Access to the camera is needed for detection</string>
    <string name="no_camera_permission">This application cannot run because it does not have the camera permission.  The application will now exit.</string>
    <string name="low_storage_error">Ocr dependencies cannot be downloaded due to low device storage</string>
    <string name="ocr_header">Click &quot;Detect Text&quot; to detect text</string>
    <string name="read_text">Detect Text</string>
    <string name="auto_focus">Auto Focus</string>
    <string name="use_flash">Use Flash</string>
    <string name="ocr_success">Text read successfully</string>
    <string name="ocr_failure">No text captured</string>
    <string name="ocr_error">"Error reading text: %1$s"</string>
    <string name="add_library">Scanner bibliothèque</string>
    <string name="finished">Terminé</string>
    <string name="library">Bibliothèque</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="orientation_instruction">Veuillez basculer votre téléphone</string>
    <string name="save">Save</string>
    <string name="delete">Supprimer le compte</string>
    <string name="profile">Profile</string>
    <string name="action_main">Main Action</string>
    <string name="informations">Informations</string>
    <string name="comment">Commentaires</string>
    <string name="description">Description</string>
    <string name="read_state">Lu</string>
    <string name="not_read_state">Pas encore lu</string>

    <!-- All Filter Spinners  -->
    <string name="readAndCategoryAllFilter">Tous</string>
    <string name="markAllFilter">Toutes</string>
    <string name="read_filter_read">Lu</string>
    <string name="mark_favorite_state">5 étoiles</string>
    <!-- ReadSpinner  -->
    <string-array name="read_array">
        <item>Tous</item>
        <item>Lu</item>
        <item>Non Lu</item>
    </string-array>
    <!-- MarkSpinner  -->
    <string-array name="mark_array">
        <item>Toutes</item>
        <item>1 étoile et +</item>
        <item>2 étoiles et +</item>
        <item>3 étoiles et +</item>
        <item>4 étoiles et +</item>
        <item>5 étoiles</item>
    </string-array>

    <!-- Tools -->
    <string name="month0">Jan</string>
    <string name="month1">Fev</string>
    <string name="month2">Mars</string>
    <string name="month3">Avr</string>
    <string name="month4">Mai</string>
    <string name="month5">Juin</string>
    <string name="month6">Juil</string>
    <string name="month7">Août</string>
    <string name="month8">Sept</string>
    <string name="month9">Oct</string>
    <string name="month10">Nov</string>
    <string name="month11">Dec</string>
    <string name="category">Genre :</string>
    <string name="not_specified">Non renseigné</string>
    <string name="pages">Nombre de pages</string>
    <string name="loan_to">Prété à :</string>
    <string name="blank" />
    <string name="by">de</string>
    <string name="filters">FILTRES</string>
    <string name="no_filter">Aucun sélectionné</string>
    <string name="sorting">TRI</string>
    <string name="default_sort">Titre(A-Z)</string>
    <string name="all">Tous</string>
    <string name="all_female">Toutes</string>
    <string name="mark">Note</string>
    <string name="read">Lu :</string>
    <string name="not_read">A lire :</string>
    <string name="see_all">Tout voir</string>
    <string name="favorite_title">Coups de coeur :</string>
    <string name="books_title">Livres :</string>
    <string name="to_read_title">A lire :</string>
    <string name="last_entries_title">Dernières entrées :</string>

    <!-- Toasts & Alert Dialog-->
    <string name="toast_unknown_error">Une erreur inconnue est survenue !!</string>
    <string name="toast_failure_try_again">Une erreur inconnue est survenue; veuillez réessayer !</string>
    <string name="yes_maj">OUI</string>
    <string name="no_maj">NON</string>


    <!-- FILTERS  -->
    <string name="list_info">Listes</string>
    <string name="small_views_info">Icones petites</string>
    <string name="medium_views_info">Icones moyennes</string>


    <!-- Login Activity -->
    <string name="login_activity_welcome_text">Bienvenu dans votre Bibliothèque</string>
    <string name="login_activity_first_sentence">Pour ne pas perdre tous vos livres en même temps que votre portable</string>
    <string name="login_activity_second_sentence">nous vous conseillons de vous identifier :</string>
    <string name="login_activity_connexion_button">CONNEXION</string>
    <string name="login_activity_skip_button">CONTINUER</string>


    <!-- Email Login Activity -->
    <string name="email_login_activity_title">Connexion :</string>
    <string name="email_login_activity_email_hint">Email</string>
    <string name="email_login_activity_password_hint">Mot de passe</string>
    <string name="email_login_activity_connexion_button">Connexion</string>
    <string name="email_login_activity_new_account_button">Nouveau compte</string>
    <string name="email_login_activity_password_lost_button">Mot de passe oublié</string>
    <string name="email_login_activity_toast_create_account_failure">Une erreur est survenue dans la création du nouveau compte</string>
    <string name="email_login_activity_toast_sign_in_failure">Une erreur est survenue lors de la connexion.</string>
    <string name="email_login_activity_status_text_view_connexion_failure">La connexion a échouée ! Veuillez vérifier vos informations de connexion</string>
    <string name="email_login_activity_required_error">Obligatoire.</string>
    <string name="email_login_activity_email_send">Un email vient de vous être envoyé !</string>
    <string name="email_login_activity_toast_login_successful">Connexion réussie !!</string>
    <string name="email_login_activity_create_user_fail_user_collision_alert">Cette adresse email est déjà associée à un compte ! Veuillez cliquer sur Connexion</string>
    <string name="email_login_activity_create_user_fail_alert">La création du compte à échouée; veuillez réessayer</string>


    <!-- Main Activity -->
    <string name="main_activity_delete_account_alert_title">Êtes-vous sûr de vouloir supprimer définitivement votre compte et perdre toute votre bibliothèque ?</string>
    <string name="main_activity_toast_account_deleted">Compte supprimé</string>
    <string name="main_activity_toast_no_account">Aucun compte associé</string>
    <string name="main_alert_dialog_warning_title">Attention !!</string>
    <string name="drawer_nav_my_friends">Mes amis</string>
    <string name="friends_top_container_title">Mes amis</string>
    <string name="home_friends_fragment_no_friend_text_view">Aucun ami pour l\'instant !</string>


    <!-- DISCUSSION ACTIVITY -->
    <string name="toolbar_title_discussion_activity">Chats de discussions</string>
    <string name="text_input_title_discussion_activity">Composer votre message</string>
    <string name="button_title_discussion_activity">ENVOYER</string>
    <string name="text_view_discussion_error">Ce fil de discussion ne contient pour le moment aucun message&#8230;</string>
    <string name="popup_title_permission_files_access">Cette application a besoin de permission pour fonctionner.</string>
    <string name="toast_title_no_book_chosen">Aucun livre choisi&#8230;</string>
    <string name="fragment_chat_no_discussion">Aucune discussion en cours !!</string>
    <string name="fragment_chat_discussion_title">Mes discussions :</string>
    <string name="friends_fragment_no_friends">Aucun ami pour le moment !!</string>
    <string name="friends_fragment_friends_title">Mes amis :</string>
    <string name="add_discussion_activity_no_friends_text">Pour demarrer une discussion, vous devez dans un premier temps ajouter des amis :</string>
    <string name="add_discussion_add_friends_button_text">Ajouter des amis</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="popup_friend_details_send_message">Envoyer un message</string>
    <string name="popup_friend_details_see_library">Voir la bibliothèque</string>
    <string name="popup_friend_details_books_title">Livres :</string>
    <string name="popup_friend_details_favorites_title">Coups de coeur :</string>
    <string name="popup_save_discussion_title">Nouvelle discussion</string>
    <string name="popup_save_discussion_create_button">Créer</string>
    <string name="popup_save_discussion_cancel_button">Annuler</string>
    <string name="popup_save_discussion_default_name_title">Nom par défault :</string>
    <string name="popup_save_discussion_information_text">Veuillez donner un nom à votre groupe de discussion</string>
    <string name="popup_save_discussion_edit_name_hint">Tapez un nom de groupe</string>
    <string name="add_friend_title">Rechercher un ami :</string>
    <string name="add_friend_search_edit_text_hint">Entrer un Email</string>
    <string name="add_friend_information_text">Veuillez entrer un email pour rechercher un ami</string>
    <string name="add_friend_no_user_find_text">Désolé, aucun profil ne correspond à cet email!</string>
    <string name="add_friend_connecting_button">SE CONNECTER</string>
    <string name="unknown_author">Auteur non renseigné</string>

</resources>
