<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    app:startDestination="@+id/homeScreen"
    >

    <fragment
        android:id="@+id/homeScreen"
        android:name="com.aprouxdev.mabibliotheque.ui.main.home.HomeFragment"
        android:label="@string/home"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_homeScreen_to_libraryScreen2"
            app:destination="@id/libraryScreen" />
    </fragment>

    <fragment
        android:id="@+id/libraryScreen"
        android:name="com.aprouxdev.mabibliotheque.ui.main.library.LibraryFragment"
        android:label="@string/library"
        tools:layout="@layout/fragment_library"/>

    <fragment
        android:id="@+id/addBookScreen"
        android:name="com.aprouxdev.mabibliotheque.ui.main.addBook.AddBookFragment"
        android:label="@string/add_book"
        tools:layout="@layout/fragment_add_book"/>
    



</navigation>