<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.authentication.LoginActivity"
    android:background="@color/background_third_taupe">

    <TextView
        android:id="@+id/loginActivityHeaderTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:gravity="center_horizontal"
        android:paddingTop="@dimen/xl_40dp"
        android:textColor="@color/text_secondary_white"
        android:textSize="28sp"
        android:textStyle="bold"
        android:background="@drawable/library_header"/>

    <TextView
        android:id="@+id/emailLoginTitleTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/loginActivityHeaderTextView"
        android:text="@string/email_login_activity_title"
        android:textColor="@color/text_fourth_grey"
        android:textSize="25sp"
        android:textStyle="bold"
        android:gravity="center_horizontal"
        android:layout_marginTop="@dimen/xl_40dp"
        android:layout_marginBottom="@dimen/xl_40dp"/>
    <TextView
        android:id="@+id/emailLoginStatusTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/emailLoginTitleTextView"
        android:textColor="@color/text_fourth_grey"
        android:textSize="18sp"
        android:gravity="center"
        android:maxLines="4"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"/>

    <LinearLayout
        android:id="@+id/emailPasswordFields"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/emailLoginStatusTextView"
        android:orientation="horizontal"
        android:paddingLeft="16dp"
        android:paddingRight="16dp">

        <EditText
            android:id="@+id/emailEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/email_login_activity_email_hint"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/passwordEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/email_login_activity_password_hint"
            android:inputType="textPassword" />
    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/emailLoginButtonsLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/emailPasswordFields"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="@dimen/large_20dp"
        android:layout_marginBottom="@dimen/large_20dp">

        <Button
            android:id="@+id/emailLoginSignIn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/normal_10dp"
            android:layout_marginEnd="@dimen/large_20dp"
            android:background="@color/background_primary_blue"
            android:text="@string/email_login_activity_connexion_button"
            android:textColor="@color/text_secondary_white"
            android:textStyle="bold"
            android:translationZ="@dimen/medium_12dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/emailLoginCreateAccount"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/emailLoginCreateAccount"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/normal_10dp"
            android:layout_marginEnd="@dimen/large_20dp"
            android:background="@color/background_primary_blue"
            android:text="@string/email_login_activity_new_account_button"
            android:textColor="@color/text_secondary_white"
            android:textStyle="bold"
            android:translationZ="@dimen/medium_12dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/emailLoginSignIn"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
    <TextView
        android:id="@+id/loginPasswordLostButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/emailLoginButtonsLayout"
        android:background="@android:color/transparent"
        android:textColor="@color/text_fifth_turquoise"
        android:text="@string/email_login_activity_password_lost_button"
        android:layout_marginStart="@dimen/large_20dp"
        android:clickable="true"
        android:focusable="true" />
    <ProgressBar
        android:id="@+id/emailLoginProgressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/loginPasswordLostButton"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="@dimen/xl_40dp"
        android:visibility="gone"/>
</RelativeLayout>